@@ -10,4 +10,5 @@ Contributors (in order of appearance)
 Robert Colquhoun				rjc@trump.net.au
 John E. Bossom					John.Bossom@cognos.com
 Anders Norlander				anorland@hem2.passagen.se
+Tor Lillqvist					tml@iki.fi
 Kevin Ruland					Kevin.Ruland@anheuser-busch.com
