@@ -477,6 +477,16 @@ extern "C"
 /*
  * ====================
  * ====================
+ * Cancelation
+ * ====================
+ * ====================
+ */
+#define PTHREAD_CANCELED       ((void *) -1)
+
+
+/*
+ * ====================
+ * ====================
  * Once Key
  * ====================
  * ====================
